[fix] navitem bottom spacing added

--- a/packages/ibm-products-styles/src/components/Nav/_nav.scss
+++ b/packages/ibm-products-styles/src/components/Nav/_nav.scss
@@ -143,7 +143,7 @@ $nav__icon__position: translate3d(-50%, 0, 0);
       padding-left: unset;
     }
 
-    > #{$nav-item-block-class}:last-of-type {
+    > .#{$nav-item-block-class}:last-of-type {
       margin-bottom: $spacing-03;
     }
   }
@@ -154,6 +154,7 @@ $nav__icon__position: translate3d(-50%, 0, 0);
   @include type.type-style('body-short-01');
 
   position: relative;
+  margin-bottom: $spacing-01;
 
   // Content including text and sometimes a product icon.
   &__content {
